complete html and styles

--- a/index.html
+++ b/index.html
@@ -5,9 +5,67 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" />
     <link rel="stylesheet" href="styles.css">
     <title>Old Apple</title>
+    <!--  Created by: Levi Butcher-->
+    <!--  Created on: 8/14/18-->
   </head>
   <body>
-    <h1>Old Apple</h1>
-
+    <header class="container">
+      <nav class="nav primary-nav">
+        <ul>
+          <li>Apple</li>
+          <li>Store</li>
+          <li>Mac</li>
+          <li>iPod</li>
+          <li>iPhone</li>
+          <li>iPad</li>
+          <li>iTunes</li>
+          <li>Support</li>
+          <li>Search</li>
+        </ul>
+      </nav>
+    </header>
+    <main class="container">
+      <section class="hero">
+        <h1>What will your verse be?</h1>
+        <h2>Everyone has something to share. See how people are using<br/>iPad in their unique ways to add to the world's story.</h2>
+        <h3>Watch the "Your Verse" film and explore the stories</h3>
+      </section>
+      <section class="box-container">
+        <div class="box box-left">
+          <!-- <h4>iPhone 5s</h4>
+          <h5>Forward thinking.</h5> -->
+        </div>
+        <div class="box box-left-middle">
+          <!-- <h4>iPhone 5c</h4>
+          <h5>For the colorful.</h5> -->
+        </div>
+        <div class="box box-right-middle">
+          <!-- <h4>Happy Birthday, Mac.</h4>
+          <h5>Explore 30 years of innovation on the Mac.</h5> -->
+        </div>
+        <div class="box box-right">
+          <!-- <h4>Supplier Responsibility</h4>
+          <h5>The latest results of our worldwide efforts.</h5> -->
+        </div>
+      </section>
+    </main>
+    <footer class="container primary-footer">
+      <div>
+        <p>Shop the Apple Online Store (1-800-MY-APPLE), visit an Apple Retail Store, or find a reseller.</p>
+        <p>Copyright © 2014 Apple Inc. All rights reserved. Terms of UsePrivacy Policy</p>
+      </div>
+      <nav class="nav">
+        <ul>
+          <li>Site Map</li>
+          <li>Hot News</li>
+          <li>RSS Feeds</li>
+          <li>Media Info</li>
+          <li>Environment</li>
+          <li>Job Opportunities</li>
+          <li>Contact Us</li>
+          <li>USA</li>
+        </ul>
+      </nav>
+    </footer>
   </body>
 </html>
